src/movies/MoviesList/MoviesList.css
.movie-list {
  padding: 40px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.height {
  height: 100vh;
}

.movie-list-grid {
  display: inline-grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  width: 100%;
  place-items: center;
  row-gap: 40px;
  column-gap: 120px;
  margin-bottom: 2.5rem;
  overflow: auto;
}

.movie-list-item-container {
  position: relative;
}

.movie-list-btn {
  display: block;
  margin: 0 auto;
  border: 1.5px solid #bdbabacd;
  outline: none;
  background-color: transparent;
  color: #ffffffcd;
  padding: 0.5rem 1.25rem;
  width: 15rem;
  font-size: 1.1rem;
  border-radius: 10px;
  transition: 0.3s ease;
}

.movie-list-btn:hover {
  color: #c9c3c37a;
  border-color: #c9c3c37a;
}

@media (max-width: 1400px) {
  .movie-list {
    margin-top: 3rem;
  }

  .movie-list-grid {
    margin-top: 2rem;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

@media (max-width: 1100px) {
  .movie-list {
    margin-top: 5rem;
  }
  .movie-list-grid {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (max-width: 710px) {
  .movie-list-grid {
    grid-template-columns: 1fr 1fr;
    column-gap: 20px;
  }
}

@media (max-width: 500px) {
  .movie-list-grid {
    column-gap: 40px;
  }
}

@media (max-width: 350px) {
  .movie-list-grid {
    column-gap: 3%;
    row-gap: 2%;
  }
}

